Check wallpaper image policy for validity.

Fixes that setting the policy to incorrect JSON crashes Chrome.

BUG=chromium:811338
TEST=DeviceSettingsProviderTest.SetWallpaperSettings

Change-Id: I4f51c4b13975215ec486618c3609b895a39f9718
Reviewed-on: https://chromium-review.googlesource.com/934447
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539194}
Former-commit-id: 73920197f02b8e2af020d9ed76c53b41001000f4